--- a/ProductService/src/main/resources/application.properties
+++ b/ProductService/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=ProductService
-security.service.url=http://localhost:8082
+#security.service.url=http://localhost:8082
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
@@ -9,3 +9,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/products
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.security.basic.enabled=false
+spring.security.user.name=admin
+spring.security.user.password=admin
