--- a/PaymentService/src/main/resources/application.properties
+++ b/PaymentService/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/payments
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+stripe.secret.key=sk_test_123456789
+
