--- a/PaymentsService/pom.xml
+++ b/PaymentsService/pom.xml
@@ -39,6 +39,12 @@
 			<artifactId>stripe-java</artifactId>
 			<version>24.3.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.10.1</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
