--- a/ProductService/src/main/resources/application.properties
+++ b/ProductService/src/main/resources/application.properties
@@ -1,15 +1,14 @@
 spring.application.name=ProductService
-#security.service.url=http://localhost:8082
-
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show-sql=true
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://localhost:3306/products
-spring.datasource.username=root
-spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 spring.security.basic.enabled=false
-spring.security.user.name=admin
-spring.security.user.password=admin
+
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+
+spring.redis.host=localhost
+spring.redis.port=6379
