--- a/AuthSecurity/src/main/resources/application.properties
+++ b/AuthSecurity/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=demoSecure
-server.port = 8888
+server.port = ${AUTH_SERVICE_PORT}
 
 
 spring.datasource.url=${SPRING_DATASOURCE_URL}
